replace login for index

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -68,7 +68,7 @@
                   >
                      Cadastrar
                   </button>
-                  <a class="btn btn-primary" href="../login.html">Login</a>
+                  <a class="btn btn-primary" href="../index.html">Login</a>
                </form>
             </div>
          </div>
